Add-user-edit-view

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,7 +22,10 @@
 @import "./items/select-form.scss";
 @import "./items/input-form.scss";
 @import "./items/show.scss";
+
 @import "./users/credits/credit.scss";
+@import "./users/edit.scss";
+
 @import "./responsive/header.scss";
 @import "./responsive/main_content.scss";
 @import "./responsive/item_box.scss";
