--- a/app/assets/stylesheets/items/items.scss
+++ b/app/assets/stylesheets/items/items.scss
@@ -4,6 +4,12 @@
     margin: 0 auto;
     background-color: $WHITE;
   }
+  &__edit{
+    section{
+      margin: 0;
+      float: right;
+    }
+  }
 }
 .common-container-inner{
   &__head{
