--- a/app/views/partial/_mypage_sidebar.html.haml
+++ b/app/views/partial/_mypage_sidebar.html.haml
@@ -63,7 +63,7 @@
 				=link_to 'メール/パスワード', root_path, class: 'mypage-main__sidebar-lists-item'
 				%i.fa.fa-angle-right
 			%li.mypage-main__sidebar-list
-				=link_to '本人確認', root_path, class: 'mypage-main__sidebar-lists-item'
+				=link_to '本人確認', edit_user_path(current_user), class: 'mypage-main__sidebar-lists-item'
 				%i.fa.fa-angle-right
 			%li.mypage-main__sidebar-list
 				=link_to '電話番号の確認', root_path, class: 'mypage-main__sidebar-lists-item'
@@ -71,6 +71,3 @@
 			%li.mypage-main__sidebar-list
 				=link_to 'ログアウト', user_logout_path(current_user), class: 'mypage-main__sidebar-lists-item'
 				%i.fa.fa-angle-right
-
-
-
