--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,8 +10,9 @@
 
     %link{rel:"icon", href:"assets/favicon.ico"}/
     %link{href: "https://fonts.googleapis.com/css?family=Source+Sans+Pro", rel: "stylesheet"}/
-
     %link{href: "https://use.fontawesome.com/releases/v5.0.8/css/all.css", rel: "stylesheet"}/
+    
+    %script{type:"text/javascript", src:"https://js.pay.jp/"}
 
   %body
     = yield
